[package]
name = "rustc_version"
version = "0.1.3"
authors = ["Marvin Löbel <loebel.marvin@gmail.com>"]
license = "MIT"

description = "A library for querying the version of a installed rustc compiler"
readme = "README.md"
documentation = "http://kimundi.github.io/rustc-version-rs/rustc_version/index.html"

repository = "https://github.com/Kimundi/rustc-version-rs"
keywords = ["version", "rustc"]

[dependencies]
semver = "0.1"
