[package]
name = "rustc_version"
version = "0.3.3"
authors = ["Marvin Löbel <loebel.marvin@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A library for querying the version of a installed rustc compiler"
readme = "README.md"
documentation = "https://docs.rs/rustc_version/"
repository = "https://github.com/Kimundi/rustc-version-rs"
keywords = ["version", "rustc"]
edition = "2018"

[dependencies]
semver = "0.11"

[dev-dependencies]
doc-comment = "0.3"
